# OS_labs

./: Killer.cpp  Multithreading_1.cpp  User.cpp  buffered_channel.h  main.cpp  script  script.ps1
A/: main.cpp
M/: CMakeLists.txt  main.cpp
Main/: CMakeLists.txt  main.cpp
Numb/: numb_library.cpp  numb_library.h
NumberStaticLibrary/: NumberStaticLibrary.sln
NumberStaticLibrary/NumberStaticLibrary/: NumberStaticLibrary.cpp  NumberStaticLibrary.h  NumberStaticLibrary.vcxproj  NumberStaticLibrary.vcxproj.filters
P/: CMakeLists.txt  main.cpp
S/: CMakeLists.txt  main.cpp
Test/: lab1.cpp  main.cpp
Vect/: vect_library.cpp  vect_library.h
Vector/: VectorLibrary.cpp  VectorLibrary.h
VectorDynamicLibrary/: VectorDynamicLibrary.sln
VectorDynamicLibrary/VectorDynamicLibrary/: VectorDynamicLibrary.vcxproj  VectorDynamicLibrary.vcxproj.filters  VectorLibrary.cpp  VectorLibrary.h
lab1/: lab1.sln
lab1/lab1/: lab1.cpp  lab1.vcxproj
number1/: CMakeLists.txt  library.cpp
testing/: CMakeLists.txt  main.cpp
vector/: CMakeLists.txt  library.cpp  library.h
